syntax = "proto3";
package tupelo.nodestore;

option go_package = "github.com/quorumcontrol/tupelo/rpcserver/nodestore";

import "tupelo.proto";

message GetRequest {
  tupelo.Cid cid = 1;
}

message GetResponse {
  tupelo.Node node = 1;
}

message PutRequest {
  tupelo.Node node = 1;
}

message PutResponse {
  tupelo.Cid cid = 1;
}

message DeleteRequest {
  tupelo.Cid cid = 1;
}

message ConfirmationResponse {
  bool success = 1;
}